# fox

./: .gitignore  Makefile  README.md  pyproject.toml
fox/: cache.py  cli.py  config.py  course_manager.py  crawl_targets.py  dep_manager.py  fetch.py  main.py  schemas.py  types.py  util.py
fox/api/: course.py  dep.py  fetch.py  form_types.py  parse_course.py  targets.py
fox/crawler/: cache.py  course_manager.py  crawler.py  dep_manager.py  fetch.py  nctu_api_interactor.py  nctu_api_nteractor.py  objects.py  test_type_parser.py  type_parser.py
fox/crawler/Tool/: progress.py
fox/crawler/target_object/: college.py  course.py  course_category.py  degree_type.py  department.py  meta_object.py  semester.py  target_object_interface.py
fox/crawler/tests/: test_nctu_api_interactor.py  test_type_parser.py
fox/data/: __init__.py  dep_108_2.py  dep_108_X.py  dep_109_X.py  dep_110_1.py
fox/dep_lists/: __init__.py  data_108_1.py  data_108_2.py  data_108_X.py  data_109_1.py  data_109_2.py  data_109_X.py  data_110_1.py
fox_nctu/: main.py
fox_nctu/CrawlSchool/: crawler.py  dep_manager.py  nctu_api_nteractor.py  objects.py  type_parser.py
fox_nctu/CrawlSchool/Tool/: progress.py
scripts/: prettier.py
stubs/fox/: main.pyi
stubs/fox/crawler/: cache.pyi  course_manager.pyi  crawler.pyi  dep_manager.pyi  fetch.pyi  parse.pyi
stubs/fox/crawler/Tool/: progress.pyi
stubs/fox/crawler/target_object/: college.pyi  course.pyi  course_category.pyi  degree_type.pyi  department.pyi  meta_object.pyi  target_object_interface.pyi
stubs/fox/crawler/tests/: test_nctu_api_interactor.pyi  test_type_parser.pyi
tests/: test_api.py  test_cache.py  test_deps_cache.py  test_fox.py  test_parse.py
tests/data/: example_api_data.py
