[tool.poetry]
name = "fox"
version = "0.1.0"
description = "retrieve courses from nctu timetable"
authors = ["Ian Chen <ianre657@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^20.2.0"
trio = "^0.17.0"
httpx = "^0.16.1"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
