[tool.poetry]
authors = ["Ian Chen <ianre657@gmail.com>"]
description = "retrieve courses from nctu timetable"
license = "MIT"
name = "fox-nctu"
readme = "README.md"
version = "0.1.0"

[tool.poetry.scripts]
fox = "fox_nctu.main:app"

[tool.poetry.dependencies]
attrs = "^20.2.0"
httpx = "^0.16.1"
pydantic = "^1.6.1"
python = "^3.6"
trio = "^0.17.0"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
